--- a/client/main.css
+++ b/client/main.css
@@ -164,7 +164,7 @@ input {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   line-height: 1.5;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0); /* background: rgba(0, 0, 0, 0.1); */
   color: white;
   border: 0;
 }
