--- a/imports/ui/containers/App/styles.css
+++ b/imports/ui/containers/App/styles.css
@@ -1,6 +1,34 @@
 .logo {
-  height: 300px;
-  width: 300px;
+  /* height: 300px;
+  width: 300px; */
+
+  /*NOTE: Lets fine tune this */
+  position: relative;
+  width: 45vw;
+  margin-bottom: 1rem;
+  z-index: -1000;
+
+  /* Animations */
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-name: loop;
+}
+@keyframes loop {
+  0% {
+    transform: scale(1);
+  }
+  5% {
+    transform: rotateZ(20deg);
+  }
+  10% {
+    transform: scale(1.3);
+  }
+  /* 15% {
+    transform: scale(1.6), rotateZ(10deg);
+  } */
+  20% {
+    transform: scale(1);
+  }
 }
 
 .logged-out-message {
@@ -62,10 +90,6 @@
 .content-wrapper div input[type="checkbox"]:checked + label:before {
   color: #4ccbb0;
   content: "\f05d";
-}
-
-.logo {
-  margin-bottom: 1rem;
 }
 
 .content-wrapper div button {
@@ -152,4 +176,32 @@
 .single-item img {
   max-width: 90vw;
   max-height: 90vw;
+}
+form.gameName {
+  min-width: 50vw;
+  text-align: center;
+  padding: 1rem;
+  border: 2px solid transparent;
+  border-radius: 5px;
+}
+form.gameName:hover {
+  border: 2px solid white;
+}
+form.gameName input {
+  min-width: 50vw;
+  text-align: center;
+  font-style: italic;
+  color: lightgray;
+  font-size: 3.5vw;
+}
+
+.joinform {
+  min-width: 50vw;
+  text-align: center;
+  padding: 1rem;
+  border: 2px solid transparent;
+  border-radius: 5px;
+}
+.joinform:hover {
+  border: 2px solid white;
 }
