--- a/imports/ui/components/Caption/styles.css
+++ b/imports/ui/components/Caption/styles.css
@@ -7,7 +7,7 @@
   color: white;
   /* position: fixed; */
   text-shadow: 3px 3px #444;
-  font-size: 3.5rem;
+  /* font-size: 2.5rem; */
   text-transform: uppercase;
 }
 .caption:nth-child(2) {
