--- a/imports/ui/containers/App/styles.css
+++ b/imports/ui/containers/App/styles.css
@@ -99,6 +99,7 @@
   cursor: pointer;
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
+  border-radius: 5px;
 }
 
 .content-wrapper div button:hover {
@@ -167,6 +168,7 @@
   cursor: pointer;
   font-size: 0.9rem;
   padding: 0.16667rem 0.33333rem;
+  border-radius: 5px;
 }
 
 .data-admin button:hover {
