--- a/imports/ui/components/Caption/styles.css
+++ b/imports/ui/components/Caption/styles.css
@@ -28,6 +28,12 @@
 .caption:nth-child(7) {
   background: yellowgreen;
 } */
+.caption button {
+  background-color: rgb(255, 110, 54);
+  border-radius: 5px;
+  margin: 1rem;
+}
+
 .caption button:hover {
   cursor: pointer;
 }
