--- a/imports/ui/components/Caption/styles.css
+++ b/imports/ui/components/Caption/styles.css
@@ -31,7 +31,7 @@
 .caption button {
   background-color: rgb(255, 110, 54);
   border-radius: 5px;
-  margin: 1rem;
+  /* margin: 1rem; */
 }
 
 .caption button:hover {
